[project]
name = "cert"
version = "0.0.1"
description = "create self-signed certs and CAs with proper extensions. probably insecure tho."

dependencies = [
    "cryptography",
    "attrs",
    "click",
    "kitchen-snake @ https://github.com/KevinMGranger/kitchen-snake/archive/refs/tags/0.0.1.zip"
]

[project.optional-dependencies]
dev = [
    "ipython", "pytest", "black", "isort", "pylama"
]

[project.scripts]
cert = "cert:cli.cli"

[tool.setuptools]
packages = ["cert"]

[tool.isort]
profile = "black"

[tool.pyright]