[project]
name = "cert"
version = "0.0.1"
description = "create self-signed certs and CAs with proper extensions. probably insecure tho."

dependencies = [
    "cryptography",
    "attrs",
    "click",
    "pyyaml",
    "kitchen-snake @ git+https://github.com/KevinMGranger/kitchen-snake"
]

[project.optional-dependencies]
vault = ["hvac"]
dev = ["pytest", "ruff"]

[project.scripts]
cert = "cert:cli.cli"

[tool.setuptools]
packages = ["cert"]

[tool.pyright]